# SmartTracking

./: CMakeLists.txt  README  TrackingBall.pro  cible.cpp  cible.hpp  config.hpp  global.hpp  main.cpp  mainqt.cpp  structs.hpp  tmp.txt  video.cpp  video.hpp  videoqt.cpp  videoqt.hpp
abc/: Makefile  rmlaunch
cmake/: FindFFMPEG.cmake
cmake/Modules/: FindFFMPEG.cmake
drone/: AtCmd.cpp  AtCmd.hpp  QAtCmd.cpp  QAtCmd.hpp
gui/: interface.cpp  interface.hpp
utils/: tcp.cpp  tcp.hpp  udp.cpp  udp.hpp
